--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/jabedek/todo-raptor"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "up-patch": "npm version patch --no-git-tag-version",
@@ -15,8 +15,17 @@
     "pub-gh": "npm run up-patch  &&  git add .  &&  git commit -m 'next'  &&  git push"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.50",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/firebase": "^3.2.1",
+    "firebase": "^9.19.1",
+    "frotsi": "^1.3.76",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "sass": "^1.61.0",
     "vite-require": "^0.2.3"
   },
   "devDependencies": {
@@ -34,6 +43,7 @@
     "prettier-eslint": "^15.0.1",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-tsconfig-paths": "^4.1.0"
   }
 }
