--- a/src/.prettierrc.json
+++ b/src/.prettierrc.json
@@ -6,5 +6,6 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "editor.formatOnSave": true,
-  "htmlWhitespaceSensitivity": "ignore"
+  "htmlWhitespaceSensitivity": "ignore",
+  "singleAttributePerLine": true
 }
