--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,14 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./",
+    "paths": {
+      "@@utils/*": ["src/utils/*"],
+      "@@components/*": ["src/components/*"],
+      "@@services/*": ["src/services/*"],
+      "@@types/*": ["src/types/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
