--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,6 +9,8 @@
       "@@utils/*": ["src/utils/*"],
       "@@components/*": ["src/components/*"],
       "@@services/*": ["src/services/*"],
+      "@@context/*": ["src/context/*"],
+      "@@hooks/*": ["src/hooks/*"],
       "@@types/*": ["src/types/*"]
     }
   },
