--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-raptor",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "type": "module",
   "repository": {
     "url": "https://github.com/jabedek/todo-raptor"
@@ -19,9 +19,11 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/firebase": "^3.2.1",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "firebase": "^9.19.1",
     "frotsi": "^1.3.96",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
