--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-raptor",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "type": "module",
   "repository": {
     "url": "https://github.com/jabedek/todo-raptor"
@@ -12,7 +12,9 @@
     "up-patch": "npm version patch --no-git-tag-version",
     "up-minor": "npm version minor --no-git-tag-version",
     "up-major": "npm version major --no-git-tag-version",
-    "pub-gh": "npm run up-patch  &&  git add .  &&  git commit -m 'next'  &&  git push"
+    "pub-gh": "npm run up-patch  &&  git add .  &&  git commit -m 'next'  &&  git push",
+    "pub-firebase": "firebase deploy",
+    "pub-all": "npm run pub-gh && npm run pub-firebase"
   },
   "dependencies": {
     "@iconify/json": "^2.2.50",
