--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
+    "resolveJsonModule": true,
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
@@ -15,5 +16,5 @@
       "@@types": ["src/app/types/index"]
     }
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "./package.json"]
 }
