--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-raptor",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "type": "module",
   "repository": {
     "url": "https://github.com/jabedek/todo-raptor"
@@ -23,12 +23,13 @@
     "@types/firebase": "^3.2.1",
     "@types/react-beautiful-dnd": "^13.1.4",
     "firebase": "^9.19.1",
-    "frotsi": "^1.3.96",
+    "frotsi": "^1.4.8",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "update": "^0.7.4",
     "vite-require": "^0.2.3"
   },
   "devDependencies": {
