--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/firebase": "^3.2.1",
+    "@types/node": "^20.2.5",
     "@types/react-beautiful-dnd": "^13.1.4",
     "firebase": "^9.19.1",
     "frotsi": "^1.4.14",
@@ -43,9 +44,11 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-eslint": "^15.0.1",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
