--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "vite --port 8000",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest",
+    "test": "vitest",
     "up-patch": "npm version patch --no-git-tag-version",
     "up-minor": "npm version minor --no-git-tag-version",
     "up-major": "npm version major --no-git-tag-version",
@@ -24,6 +24,7 @@
     "@types/firebase": "^3.2.1",
     "@types/node": "^20.2.5",
     "@types/react-beautiful-dnd": "^13.1.4",
+    "@uidotdev/usehooks": "^2.0.1",
     "firebase": "^9.19.1",
     "frotsi": "^1.4.14",
     "react": "^18.2.0",
@@ -35,9 +36,7 @@
     "vite-require": "^0.2.3"
   },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
     "@total-typescript/ts-reset": "^0.4.2",
-    "@types/jest": "^29.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -47,17 +46,16 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-eslint": "^15.0.1",
-    "react-test-renderer": "^18.2.0",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1",
-    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-zip-file": "^2.0.0",
-    "vite-tsconfig-paths": "^4.1.0"
+    "vite-tsconfig-paths": "^4.1.0",
+    "vitest": "^0.31.4"
   }
 }
